{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 220,
  "lineage": "70f4bafb-6f76-ff4c-4900-1596a36b6f14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e65f2d895e906641",
            "association_id": "eipassoc-0b94a8c4eb4936d8d",
            "domain": "vpc",
            "id": "eipalloc-0e65f2d895e906641",
            "network_border_group": "us-east-1",
            "network_interface": "eni-087f645caae7f13de",
            "private_dns": "ip-10-0-0-60.ec2.internal",
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-44-193-92-18.compute-1.amazonaws.com",
            "public_ip": "44.193.92.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP 1"
            },
            "tags_all": {
              "Name": "EIP 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e731c8a588258d0d",
            "arn": "arn:aws:ec2:us-east-1:339712824194:instance/i-00d581fb4ba28e49e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d581fb4ba28e49e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ajam-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c8301a3fc6a8135",
            "private_dns": "ip-10-0-0-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09479682ec0fd1021",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-048ec219a999e7ce2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d01c424fb8ef6dc",
            "tags": {
              "Name": "PrivateInstance"
            },
            "tags_all": {
              "Name": "PrivateInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-048ec219a999e7ce2"
            ]
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_subnet.private",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e731c8a588258d0d",
            "arn": "arn:aws:ec2:us-east-1:339712824194:instance/i-01686f72fcdf04a33",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01686f72fcdf04a33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ajam-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fbb5de9fb34b90f",
            "private_dns": "ip-10-0-0-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.34",
            "public_dns": "ec2-54-86-175-174.compute-1.amazonaws.com",
            "public_ip": "54.86.175.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04557b067a39a5340",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09136bf3e14db48a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0988de241601cc322",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09136bf3e14db48a1"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:internet-gateway/igw-0743a701c644706c0",
            "id": "igw-0743a701c644706c0",
            "owner_id": "339712824194",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "dependencies": [
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e65f2d895e906641",
            "association_id": "eipassoc-0b94a8c4eb4936d8d",
            "connectivity_type": "public",
            "id": "nat-0cd832710e5055e68",
            "network_interface_id": "eni-087f645caae7f13de",
            "private_ip": "10.0.0.60",
            "public_ip": "44.193.92.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0988de241601cc322",
            "tags": {
              "Name": "Nat Gateway Public Subnet 1"
            },
            "tags_all": {
              "Name": "Nat Gateway Public Subnet 1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_subnet.public",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:route-table/rtb-03285ab6742eeb0b2",
            "id": "rtb-03285ab6742eeb0b2",
            "owner_id": "339712824194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0743a701c644706c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route-table"
            },
            "tags_all": {
              "Name": "Public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:route-table/rtb-0db8e4d8e7c228357",
            "id": "rtb-0db8e4d8e7c228357",
            "owner_id": "339712824194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd832710e5055e68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.public",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbea65991b4dc6d",
            "route_table_id": "rtb-0db8e4d8e7c228357",
            "subnet_id": "subnet-08d01c424fb8ef6dc"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbb3e518c2c90e4f",
            "route_table_id": "rtb-03285ab6742eeb0b2",
            "subnet_id": "subnet-0988de241601cc322"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.Public_Route",
            "aws_subnet.public",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:security-group/sg-048ec219a999e7ce2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048ec219a999e7ce2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09136bf3e14db48a1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240212011942683600000002",
            "name_prefix": "terraform-",
            "owner_id": "339712824194",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:security-group/sg-09136bf3e14db48a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09136bf3e14db48a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.76.233.9/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240212011942680800000001",
            "name_prefix": "terraform-",
            "owner_id": "339712824194",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-964145499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048ec219a999e7ce2",
            "security_group_rule_id": "sgr-0aac2096d26b22c72",
            "self": false,
            "source_security_group_id": "sg-09136bf3e14db48a1",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "109.76.233.9/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1416746821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09136bf3e14db48a1",
            "security_group_rule_id": "sgr-06a5c62bdd1552491",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:subnet/subnet-08d01c424fb8ef6dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d01c424fb8ef6dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712824194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet1"
            },
            "tags_all": {
              "Name": "Private-Subnet1"
            },
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "dependencies": [
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:subnet/subnet-0988de241601cc322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0988de241601cc322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712824194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet1"
            },
            "tags_all": {
              "Name": "Public-Subnet1"
            },
            "vpc_id": "vpc-0abd088d304072dc1"
          },
          "dependencies": [
            "aws_vpc.my-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712824194:vpc/vpc-0abd088d304072dc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ecc56288d93306aa",
            "default_route_table_id": "rtb-017eea7c5a485245b",
            "default_security_group_id": "sg-093a677d682a26381",
            "dhcp_options_id": "dopt-0a82b4637d246bde2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abd088d304072dc1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017eea7c5a485245b",
            "owner_id": "339712824194",
            "tags": {
              "Name": "My-VPC1"
            },
            "tags_all": {
              "Name": "My-VPC1"
            }
          }
        }
      ]
    }
  ]
}